@@ -16,3 +16,17 @@ ty <- function(x, par) {
         x
     }
 }
+
+## Make use of graphics::grconvert[X|Y]()
+
+grconvertX <- function(x, from, to) {
+    dev.set(recordDev())
+    on.exit(dev.set(playDev()))
+    graphics::grconvertX(x, from, to)
+}
+
+grconvertY <- function(x, from, to) {
+    dev.set(recordDev())
+    on.exit(dev.set(playDev()))
+    graphics::grconvertY(x, from, to)
+}
